--- a/Backend/appsettings.json
+++ b/Backend/appsettings.json
@@ -5,8 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Host=db;Port=5432;Database=postgres;Username=postgres;Password=postgres"
-  }
+    "AppDbContext": "Host=localhost; Port=5432; Database=notes; Username=postgres; Password=postgres"
+  }  
 }
