--- a/Frontend/angular.json
+++ b/Frontend/angular.json
@@ -14,6 +14,9 @@
             "main": "src/main.ts",
             "polyfills": ["zone.js"],
             "tsConfig": "tsconfig.json",
+            "styles": [
+              "src/styles.css"
+            ],
             "aot": true
           }
         },
